[package]
name = "matrixlib"
version = "0.1.0"
edition = "2021"
description = "A minimal, single-file matrix/vector library for Rust, with fused primitives for training small neural networks."
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
